--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "parcel src/index.html"
   },
   "repository": {
     "type": "git",
@@ -16,5 +16,10 @@
   "bugs": {
     "url": "https://github.com/iac-gwc-2019/political-project-frontend/issues"
   },
-  "homepage": "https://github.com/iac-gwc-2019/political-project-frontend#readme"
+  "homepage": "https://github.com/iac-gwc-2019/political-project-frontend#readme",
+  "dependencies": {
+    "parcel-bundler": "^1.12.3",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
+  }
 }
