--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "clean": "rm-cli -r ./dist ./.cache",
+    "clean": "rimraf -r ./dist ./.cache",
     "build": "npm run clean && parcel build src/index.html -d ./dist/ --public-url ./",
     "start": "npm run clean && parcel src/index.html"
   },
@@ -30,6 +30,6 @@
   },
   "devDependencies": {
     "node-sass": "^4.12.0",
-    "rm-cli": "^1.4.2"
+    "rimraf": "^2.6.3"
   }
 }
