--- a/package.json
+++ b/package.json
@@ -20,15 +20,20 @@
   },
   "homepage": "https://github.com/iac-gwc-2019/political-project-frontend#readme",
   "dependencies": {
-    "parcel-bundler": "^1.8.1",
+    "@material-ui/core": "^4.2.1",
+    "parcel-bundler": "^1.12.3",
     "postcss-custom-properties": "^8.0.9",
     "postcss-modules": "^1.4.1",
     "react": "^16.8.6",
+    "react-bootstrap": "^1.0.0-beta.9",
     "react-dom": "^16.8.6",
+    "react-grid-system": "^4.4.10",
+    "react-navbar": "^3.0.0",
     "react-router-dom": "^5.0.1",
-    "sass": "^1.15.3"
+    "reactstrap": "^8.0.1"
   },
   "devDependencies": {
+    "autoprefixer": "^9.6.1",
     "node-sass": "^4.12.0",
     "rimraf": "^2.6.3"
   }
