--- a/package.json
+++ b/package.json
@@ -21,18 +21,22 @@
   "homepage": "https://github.com/iac-gwc-2019/political-project-frontend#readme",
   "dependencies": {
     "@material-ui/core": "^4.3.0",
+    "@material-ui/icons": "^4.2.1",
     "bootstrap": "^4.3.1",
     "jquery": "^3.4.1",
     "parcel-bundler": "^1.12.3",
     "popper.js": "^1.15.0",
     "postcss-custom-properties": "^8.0.9",
     "postcss-modules": "^1.4.1",
+    "prop-types": "^15.7.2",
     "react": "^16.8.6",
     "react-bootstrap": "^1.0.0-beta.10",
     "react-dom": "^16.8.6",
     "react-grid-system": "^4.4.10",
     "react-navbar": "^3.0.0",
     "react-router-dom": "^5.0.1",
+    "react-swipeable-views": "^0.13.3",
+    "react-twitter-embed": "^2.0.8",
     "reactstrap": "^8.0.1",
     "styled-components": "^4.3.2"
   },
