--- a/package.json
+++ b/package.json
@@ -42,6 +42,11 @@
     "styled-components": "^4.3.2"
   },
   "devDependencies": {
+    "@babel/core": "^7.5.5",
+    "@babel/plugin-transform-runtime": "^7.5.5",
+    "@babel/preset-env": "^7.5.5",
+    "@babel/preset-react": "^7.0.0",
+    "@babel/runtime": "^7.5.5",
     "autoprefixer": "^9.6.1",
     "node-sass": "^4.12.0",
     "rimraf": "^2.6.3"
